[tool.poetry]
name = "bac-statistics"
version = "0.1.0"
description = ""
authors = ["David Alexandru <fanefaraon696@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
